--- a/css/2010-dark.css
+++ b/css/2010-dark.css
@@ -42,7 +42,7 @@
 
 /* BUTTONS BASE */
 
-.ytp-chrome-bottom .ytp-button {
+.html5-video-player .ytp-chrome-bottom .ytp-button {
     border: solid 1px rgb(60, 65, 68);
     background: var(--pt-button-gradient) !important;
 }
