--- a/css/2010.css
+++ b/css/2010.css
@@ -335,7 +335,7 @@
 .html5-video-player .ytp-chrome-bottom .ytp-time-display {
 	line-height: 47px !important;
 	padding: 0px 10px !important;
-	margin-top: -8px;
+	margin-top: -8px !important;
 	font-size: 12px;
 	height: 50px;
 }
