--- a/css/2013.css
+++ b/css/2013.css
@@ -557,7 +557,7 @@
 }
 
 .ytp-contextmenu .ytp-menuitem[aria-checked=true] .ytp-menuitem-toggle-checkbox {
-	background: url(chrome-extension://__MSG_@@extension_id__/img/inverted-check.svg);
+	background: url(chrome-extension://__MSG_@@extension_id__/img/inverted-check.svg) !important;
 }
   
 .ytp-big-mode.ytp-contextmenu.ytp-popup.ytp-contextmenu {
