--- a/css/delhi.css
+++ b/css/delhi.css
@@ -13,7 +13,7 @@
     display: none !important;
 }
 
-.ytp-delhi-modern-icons .ytp-chrome-controls .ytp-button svg {
+.ytp-delhi-modern-icons .ytp-chrome-bottom .ytp-chrome-controls .ytp-button svg {
     width: 100% !important;
     height: auto !important;
     padding: 0 !important;
