--- a/css/2006.css
+++ b/css/2006.css
@@ -21,7 +21,7 @@
 	background: none !important;
 }
 
-.html5-video-player .ytp-chrome-bottom {
+.html5-video-player[aria-label] .ytp-chrome-bottom {
 	height: 30px !important;
 	width: 100% !important;
     left: 0 !important;
@@ -609,7 +609,7 @@
 }
 
 .html5-video-player.ytp-delhi-modern .ytp-chrome-bottom .ytp-time-wrapper {
-    height: 100%;
+    height: 100% !important;
     top: -12px;
 }
 
@@ -632,7 +632,7 @@
 #sponsorBlockDurationAfterSkips 
 {
     position: sticky;
-    font-size: 10px;
+    font-size: 10px !important;
     bottom: 9px;
 }
 
