--- a/css/2013.css
+++ b/css/2013.css
@@ -16,7 +16,7 @@
 	background: none !important;
 }
 
-.html5-video-player .ytp-chrome-bottom {
+.html5-video-player[aria-label] .ytp-chrome-bottom {
 	height: 32px !important;
 	width: 100% !important;
     left: 0 !important;
@@ -168,7 +168,7 @@
 
 /* SCRUBBER */
 
-.ytp-swatch-background-color.ytp-scrubber-button {
+.html5-video-player .ytp-chrome-bottom .ytp-swatch-background-color.ytp-scrubber-button {
 	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-scrubber.png) !important;
 	background-position: 0px 0px !important;
 	background-size: 18px !important;
@@ -178,7 +178,7 @@
 	position: relative;
 }
 
-.ytp-swatch-background-color.ytp-scrubber-button:hover {
+.html5-video-player .ytp-chrome-bottom .ytp-swatch-background-color.ytp-scrubber-button:hover {
 	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-scrubber-hover.png) !important;
 	background-position: 0px 0px !important;
 	background-size: 18px !important;
@@ -186,13 +186,13 @@
 	width: 18px !important;
 }
 
-.ytp-swatch-background-color.ytp-scrubber-button.ytp-swatch-background-color {
+.html5-video-player .ytp-chrome-bottom .ytp-swatch-background-color.ytp-scrubber-button.ytp-swatch-background-color {
 	background-color: transparent !important;
 }
 
-.ytp-scrubber-container {
-	width: 0px;
-	height: 0px;
+.html5-video-player .ytp-chrome-bottom .ytp-scrubber-container {
+	width: 18px;
+	height: 18px;
 	top: 5px;
 	left: 0px;
 	margin-top: -5px;
@@ -201,14 +201,9 @@
 	transition: width .5s, height .5s, top .5s, left .5s !important;
 }
 
-.html5-video-player.ytp-delhi-modern .ytp-scrubber-container {
+.html5-video-player.ytp-delhi-modern .ytp-chrome-bottom .ytp-scrubber-container {
 	top: 1px !important;
 	left: -2px !important;
-}
-
-.ytp-progress-bar .ytp-scrubber-container {
-	width: 18px;
-	height: 18px;
 }
 
 .ytp-progress-bar-container:hover:not([aria-disabled=true]) .ytp-scrubber-button.ytp-scrubber-button-hover {
@@ -343,7 +338,7 @@
 	line-height: 47px !important;
     padding: 0px 10px !important;
     margin-top: -7px !important;
-    font-size: 12px;
+    font-size: 12px !important;
     height: 46px;
 }
 
