--- a/css/2015.css
+++ b/css/2015.css
@@ -18,7 +18,7 @@
 	height: inherit !important;
 }
 
-.html5-video-player .ytp-chrome-bottom {
+.html5-video-player[aria-label] .ytp-chrome-bottom {
 	height: 42px !important;
 	left: 0 !important;
 	right: 0;
@@ -159,7 +159,7 @@
 
 /* SCRUBBER */
 
-.ytp-swatch-background-color.ytp-scrubber-button {
+.html5-video-player .ytp-chrome-bottom .ytp-swatch-background-color.ytp-scrubber-button {
 	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-scrubber.png) !important;
 	background-position: 0px 0px !important;
 	background-size: 18px !important;
@@ -169,7 +169,7 @@
 	position: relative;
 }
 
-.ytp-swatch-background-color.ytp-scrubber-button:hover {
+.html5-video-player .ytp-chrome-bottom .ytp-swatch-background-color.ytp-scrubber-button:hover {
 	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-scrubber-hover.png) !important;
 	background-position: 0px 0px !important;
 	background-size: 18px !important;
@@ -177,26 +177,19 @@
 	width: 18px !important;
 }
 
-.ytp-swatch-background-color.ytp-scrubber-button.ytp-swatch-background-color {
+.html5-video-player .ytp-chrome-bottom .ytp-swatch-background-color.ytp-scrubber-button.ytp-swatch-background-color {
 	background-color: transparent !important;
 }
 
-.ytp-scrubber-container {
-	width: 0px;
-	height: 0px;
+.html5-video-player .ytp-chrome-bottom .ytp-scrubber-container {
+	width: 18px;
+	height: 18px;
 	top: 0px !important;
-    left: -6px !important;
+    left: -15px !important;
 	margin-top: -5px;
 	justify-items: center;
 	overflow: hidden;
 	transition: width .5s, height .5s, top .5s, left .5s !important;
-}
-
-.ytp-progress-bar .ytp-scrubber-container {
-	width: 18px;
-	height: 18px;
-	top: 1px;
-	left: -15px;
 }
 
 .ytp-progress-bar-container:hover:not([aria-disabled=true]) .ytp-scrubber-button.ytp-scrubber-button-hover {
@@ -359,7 +352,7 @@
 	text-shadow: none !important;
 	line-height: 47px !important;
     padding: 0px 10px !important;
-    margin-top: -3px;
+    margin-top: -3px !important;
     font-size: 12px;
     height: 46px;
 }
