--- a/css/2012.css
+++ b/css/2012.css
@@ -286,7 +286,7 @@
 }
 
 .ytp-autohide:not(.paused-mode) .ytp-chrome-top {
-    display: none;
+    opacity: 0;
 }
 
 .html5-video-player .ytp-chrome-bottom .ytp-chrome-controls .ytp-left-controls .ytp-button,
